src/snapshots/droid_tui__regression__visual_graph_latency_error_snapshot@graph_latency_error_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
┌(unnamed)─────────────────────────────────────────────────────────────────────────────────────────┐
│──────────────────────────────────────────────────────────────────────────────────────────────────│
╭p2b8────────────────╮                                                                             │
│                    │                                                                             │
│                    │             ╭copy────────────────╮                                          │
│                    │             │                    │                                          │
╰────────────────────╯             ◉────┐            ┌──●                                          │
│                                  │    │            │  │                                          │
│                                  ╰────────────────────╯                                          │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                                             │
│                                       │            │                        ╭contour─────────────╮
│                                       │            │                        │                    │
│                                       │          ╭mixer───────────────╮  ┌──◉                    │
│                                       │          │ │                  │  │  │                    │
│                                       │       ┌──◉─┘                  ●──┘  ╰────────────────────╯
│                                       │       │  │                    │                          │
│                                       │       │  ╰────────────────────╯                          │
│                       ╭clocktool───────────╮  │                                                  │
│                       │               │    │  │                                                  │
│                       │               └────●──┘                                                  │
│                       │                    │                                                     │
│                       ╰────────────────────╯                                                     │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 290 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
