src/snapshots/droid_tui__regression__visual_graph_latency_error_snapshot@graph_latency_error_mono_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│      DROID: graph_latency_error      │
└──────────────────────────────────────┘



┌(unnamed)─────────────────────────────┐
│                                      │
│   ╭copy────────────────╮             │
│   │                    │             │
│   ◉───────┐   ┌────────●             │
│   │       │   │        │             │
│   ╰────────────────────╯             │
│           │   │                      │
│           │   │                      │
╭clocktool───────────╮                 │
│           │   │    │                 │
│           └────────●        ╭contour─╮
│             │ │    │        │        │
╰───────╭mixer───────────────╮◉        │
│       │     │ │            ││        │
│       ◉───────┘            ●╰────────╯
│       │                    │         │
│       ╰────────────────────╯         │
│                                      │
│                                      │
╭p2b8────────────────╮                 │
│                    │                 │
│                    │                 │
│                    │                 │
╰────────────────────╯                 │
│                                      │
└──────────────────────────────────────┘




┌──────────────────────────────────────┐
│Loaded graph_latency_error | Renders d│
└──────────────────────────────────────┘
