src/snapshots/droid_tui__regression__visual_graph_latency_error_snapshot@graph_latency_error_terminal_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
┌(unnamed)─────────────────────────────┐
│──────────────────────────────────────│
│                ╭copy────────────────╮│
│                │                    ││
│                ◉─┐         ┌────────●│
│                │ │         │        ││
│                ╰────────────────────╯│
│                  │         │         │
╭clocktool───────────╮       │         │
│                  │ │       │         │
│                  └─●       │         │
│                    │       │         │
╰────────────────────╭mixer────────────╮
│                    │       │         │
│                    ◉───────┘         ●
│                    │                 │
│                    ╰─────────────────╯
│                                      │
│                                      │
│    ╭p2b8────────────────╮            │
│    │                    │            │
│    │                    │            │
│    │                    │            │
│    ╰────────────────────╯            │
│                                      │
└──────────────────────────────────────┘










┌──────────────────────────────────────┐
│Loaded graph_latency_error | Renders d│
└──────────────────────────────────────┘
