src/snapshots/droid_tui__regression__visual_graph_latency_fanout_snapshot@graph_latency_fanout_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│       ┌(unnamed)────────────────────────────────────────────────────────────────────────┐        │
└───────│─────────────────────────────────────────────────────────────────────────────────│────────┘
        │                                                          ╭copy────────────────╮ │
        │                                                          │                    │ │
        │             ╭clocktool───────────╮           ┌───────────◉                    │ │
        │             │                    │           │           │                    │ │
        │             │                ┌───●──────┐────┘           ╰────────────────────╯ │
        │             │                │   │      │                                       │
        │             ╰────────────────────╯      │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │                                       │
        │                              │          │      ╭mixer───────────────╮           │
        │                              │          │      │                    │           │
        │                              │          └──────◉                    │           │
        │                              │                 │                    │           │
        │                              │                 ╰────────────────────╯           │
        │                              │                                                  │
        │                              │                                                  │
        │                           ╭contour─────────────╮                                │
        │                           │  │                 │                                │
        │                           ◉──┘                 │                                │
        │ ╭p2b8────────────────╮    │                    │                                │
        │ │                    │    ╰────────────────────╯                                │
        │ │                    │                                                          │
        │ │                    │                                                          │
        │ ╰────────────────────╯                                                          │
        │                                                                                 │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_fanout | Renders degraded at 100 cols — use ≥ 290 cols or reduce scale | late│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
