src/snapshots/droid_tui__regression__visual_graph_latency_fanout_snapshot@graph_latency_fanout_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                              DROID: graph_latency_fanout                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┌(unnamed)──────────────────────────────────────┐
│◉◉┐                                                                   ││                                              │
│…0%                                                                   ││   ╭clocktool───────────╮                     │
││ │                                                                   ││   │                    │                     │
││ │                                                                   ││   │           ┌─────┌──╭copy────────────────╮│
││ │                                                                   ││   │           │     │  │                    ││
││ │                                                                   ││   ╰────────────────────◉                    ││
││ │                                                                   ││               │     │  │                    ││
││ │                                                                   ││               │     │  ╰────────────────────╯│
││ │                                                                   ││               │     │                        │
││ │                                                                   ││               │  ╭mixer───────────────╮      │
│○○│                                                                   ││               │  │  │                 │      │
│……│                                                                   ││      ╭contour─────────────╮           │      │
││ │                                                                   ││      │        │  │        │           │      │
││ │                                                                   ││      ◉────────┘  ╰────────│───────────╯      │
│○○│                                                                   ││      │                    │                  │
│○○│                                                                   ││      ╰────────────────────╯                  │
││ │                                                                   ││                                              │
││ │                                                                   ││╭p2b8────────────────╮                        │
││ │                                                                   │││                    │                        │
│○○│                                                                   │││                    │                        │
│……│                                                                   │││                    │                        │
││ │                                                                   ││╰────────────────────╯                        │
││ │                                                                   ││                                              │
│○○│                                                                   ││                                              │
│○○│                                                                   ││                                              │
││ │                                                                   ││       ╭p2b8────────────────╮                 │
││ │                                                                   ││       │                    │                 │
││ │                                                                   ││       │                    │                 │
││ │                                                                   ││       │                    │                 │
││ │                                                                   ││       ╰────────────────────╯                 │
││ │                                                                   ││                                              │
│└─┘                                                                   └───────────────────────────────────────────────┘
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_fanout | Renders degraded at 120 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max 0.│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
