src/snapshots/droid_tui__regression__visual_graph_latency_fanout_snapshot@graph_latency_fanout_classic_160.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                  DROID: graph_latency_fanout                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┌(unnamed)──────────────────────────────────────────────────────┐
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────│┌ Graph ───────────────────────────────────────────────────────│
│◉◉┐                                                                                           ││   ╭clocktool───────────╮                                     │
│…0%                                                                                           ││   │                    │               ╭copy────────────────╮│
││ │                                                                                           ││   │              ┌─────●──┐────┐       │                    ││
││ │                                                                                           ││   │              │     │  │    └───────◉                    ││
││ │                                                                                           ││   ╰────────────────────╯  │            │                    ││
││ │                                                                                           ││                  │        │            ╰────────────────────╯│
││ │                                                                                           ││                  │        │                                  │
││ │                                                                                           ││                  │        │                                  │
││ │                                                                                           ││                  │        │                                  │
││ │                                                                                           ││                  │        │                                  │
│○○│                                                                                           ││                  │        │                                  │
│……│                                                                                           ││                  │        │                                  │
││ │                                                                                           ││                  │        │                                  │
││ │                                                                                           ││                  │        │  ╭mixer───────────────╮          │
│○○│                                                                                           ││                  │        │  │                    │          │
│○○│                                                                                           ││                  │        └──◉                    │          │
││ │                                                                                           ││                  │           │                    │          │
││ │                                                                                           ││             ╭contour─────────────╮────────────────╯          │
││ │                                                                                           ││             │    │               │                           │
│○○│                                                                                           ││             ◉────┘               │                           │
│……│                                                                                           ││             │                    │                           │
││ │                                                                                           ││             ╰────────────────────╯                           │
││ │                                                                                           ││                                                              │
│○○│                                                                                           ││                                                              │
│○○│                                                                                           ││                                                              │
││ │                                                                                           ││                                                              │
││ │                                                                                           ││╭p2b8────────────────╮                                        │
││ │                                                                                           │││                    │                                        │
││ │                                                                                           │││                    │                                        │
││ │                                                                                           │││                    │                                        │
││ │                                                                                           ││╰────────────────────╯                                        │
│└─┘                                                                                           ││                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────└───────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_latency_fanout | Renders degraded at 160 cols — use ≥ 290 cols or reduce scale | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) | Sc│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
